created btn + card component + added header btns & card to container

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -4,6 +4,10 @@
 @import './assets/_animations';
 @import './assets/_base';
 
+@import './pages/home/home';
+
 @import './components/header/header';
 @import './components/footer/footer';
 @import './components/title/title';
+@import './components/btn/btn';
+@import './components/card/card';
