--- a/client/src/assets/_base.scss
+++ b/client/src/assets/_base.scss
@@ -5,10 +5,15 @@
   max-width: 100vw;
   grid-template-rows: 15% 75% 10%;
   background: $primary-color;
+  overflow: hidden;
 }
 
 .center-items {
   display: grid;
   justify-items: center;
   align-items: center;
+}
+
+.pointer {
+  cursor: pointer;
 }
