--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,7 +1,18 @@
 .header {
-  grid-template-columns: 1fr 7fr;
+  grid-template-columns: 3fr 1fr;
+  width: 85%;
 
   .title {
     font-size: 40px;
+    justify-self: start;
+  }
+
+  .header-btns {
+    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
+
+    .btn {
+      justify-self: end;
+    }
   }
 }
