--- a/client/src/assets/_base.scss
+++ b/client/src/assets/_base.scss
@@ -1,11 +1,15 @@
+input,
+button,
+a {
+  outline: none;
+}
+
 .app {
   font-family: 'Ubuntu', sans-serif;
   color: $font-color;
   min-height: 100vh;
   max-width: 100vw;
-  grid-template-rows: 15% 75% 10%;
   background: $primary-color;
-  overflow: hidden;
 }
 
 .center-items {
@@ -16,4 +20,8 @@
 
 .pointer {
   cursor: pointer;
+}
+
+.transition {
+  transition: 0.5s ease-in-out;
 }
