--- a/client/src/components/card/card.scss
+++ b/client/src/components/card/card.scss
@@ -3,4 +3,21 @@
   width: 12em;
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 5px;
+
+  .card-title {
+    opacity: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.5);
+
+    &:hover {
+      opacity: 1;
+      background: rgba(0, 0, 0, 0.5);
+    }
+    .title {
+      font-size: 1.5em;
+    }
+  }
 }
