--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,18 +1,8 @@
 .header {
-  grid-template-columns: 3fr 1fr;
-  width: 85%;
-
-  .title {
-    font-size: 40px;
-    justify-self: start;
-  }
-
-  .header-btns {
-    width: 100%;
-    grid-template-columns: repeat(3, 1fr);
-
-    .btn {
-      justify-self: end;
-    }
-  }
+  height: 20vh;
+  font-size: 2em;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  grid-gap: 1em;
 }
