--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -1,4 +1,17 @@
 .home {
-  width: 90%;
+  width: 85%;
   height: 100%;
+  grid-gap: 1em;
+
+  .home-title {
+    font-size: 3em;
+    justify-self: start;
+  }
+
+  .games-cards {
+    height: 100%;
+    width: 100%;
+    grid-template-columns: repeat(7, 1fr);
+    grid-gap: 1em;
+  }
 }
